--- a/src/simrskhanza/DlgCariPeriksaLab.form
+++ b/src/simrskhanza/DlgCariPeriksaLab.form
@@ -56,7 +56,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/picture/category.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Model 1"/>
+                <Property name="text" type="java.lang.String" value="Model 1 - Sh"/>
                 <Property name="name" type="java.lang.String" value="MnCetakHasilLab" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[100, 26]"/>
@@ -80,7 +80,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/picture/category.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Model 2"/>
+                <Property name="text" type="java.lang.String" value="Model 2 - Lo"/>
                 <Property name="name" type="java.lang.String" value="MnCetakHasilLab1" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[100, 26]"/>
@@ -104,7 +104,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/picture/category.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Model 3"/>
+                <Property name="text" type="java.lang.String" value="Model 3 - Sw"/>
                 <Property name="name" type="java.lang.String" value="MnCetakHasilLab2" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[100, 26]"/>
