--- a/src/simrskhanza/DlgCariPeriksaLabPA.form
+++ b/src/simrskhanza/DlgCariPeriksaLabPA.form
@@ -57,7 +57,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/picture/category.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Cetak Hasil Lab 2 - OK"/>
+            <Property name="text" type="java.lang.String" value="Cetak Hasil Lab 2 - OKE dr. Anas"/>
             <Property name="actionCommand" type="java.lang.String" value="Cetak Hasil Lab 2"/>
             <Property name="name" type="java.lang.String" value="MnCetakHasilLab2" noResource="true"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -66,6 +66,56 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MnCetakHasilLab2ActionPerformed"/>
+          </Events>
+        </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="MnCetakHasilLab3">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="fe" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="11" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="32" green="32" red="32" type="rgb"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/picture/category.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Cetak Hasil Lab 3 - MDT 1"/>
+            <Property name="actionCommand" type="java.lang.String" value="Cetak Hasil Lab 2"/>
+            <Property name="name" type="java.lang.String" value="MnCetakHasilLab3" noResource="true"/>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[100, 26]"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MnCetakHasilLab3ActionPerformed"/>
+          </Events>
+        </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="MnCetakHasilLab4">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="fe" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="11" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="32" green="32" red="32" type="rgb"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/picture/category.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Cetak Hasil Lab 4 - MDT 2"/>
+            <Property name="actionCommand" type="java.lang.String" value="Cetak Hasil Lab 2"/>
+            <Property name="name" type="java.lang.String" value="MnCetakHasilLab4" noResource="true"/>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[100, 26]"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MnCetakHasilLab4ActionPerformed"/>
           </Events>
         </MenuItem>
         <MenuItem class="javax.swing.JMenuItem" name="MnCetakHasilLab11">
@@ -1165,7 +1215,7 @@
                                 <Component class="widget.Label" name="label14">
                                   <Properties>
                                     <Property name="horizontalAlignment" type="int" value="2"/>
-                                    <Property name="text" type="java.lang.String" value="Diagnosa Klinis :"/>
+                                    <Property name="text" type="java.lang.String" value="Diagnosa Klinis / Seri Eritrosit :"/>
                                     <Property name="name" type="java.lang.String" value="label14" noResource="true"/>
                                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                                       <Dimension value="[60, 23]"/>
@@ -1173,7 +1223,7 @@
                                   </Properties>
                                   <Constraints>
                                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                                      <AbsoluteConstraints x="15" y="15" width="90" height="23"/>
+                                      <AbsoluteConstraints x="15" y="15" width="230" height="23"/>
                                     </Constraint>
                                   </Constraints>
                                 </Component>
@@ -1214,7 +1264,7 @@
                                 <Component class="widget.Label" name="label17">
                                   <Properties>
                                     <Property name="horizontalAlignment" type="int" value="2"/>
-                                    <Property name="text" type="java.lang.String" value="Makroskopik :"/>
+                                    <Property name="text" type="java.lang.String" value="Makroskopik / Seri Leukosit:"/>
                                     <Property name="name" type="java.lang.String" value="label17" noResource="true"/>
                                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                                       <Dimension value="[60, 23]"/>
@@ -1222,7 +1272,7 @@
                                   </Properties>
                                   <Constraints>
                                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                                      <AbsoluteConstraints x="15" y="69" width="90" height="23"/>
+                                      <AbsoluteConstraints x="15" y="69" width="230" height="23"/>
                                     </Constraint>
                                   </Constraints>
                                 </Component>
@@ -1285,7 +1335,7 @@
                                 <Component class="widget.Label" name="label19">
                                   <Properties>
                                     <Property name="horizontalAlignment" type="int" value="2"/>
-                                    <Property name="text" type="java.lang.String" value="Mikroskopik :"/>
+                                    <Property name="text" type="java.lang.String" value="Mikroskopik / Seri Trombosit :"/>
                                     <Property name="name" type="java.lang.String" value="label19" noResource="true"/>
                                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                                       <Dimension value="[60, 23]"/>
@@ -1293,7 +1343,7 @@
                                   </Properties>
                                   <Constraints>
                                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                                      <AbsoluteConstraints x="15" y="263" width="90" height="23"/>
+                                      <AbsoluteConstraints x="15" y="263" width="230" height="23"/>
                                     </Constraint>
                                   </Constraints>
                                 </Component>
@@ -1334,7 +1384,7 @@
                                 <Component class="widget.Label" name="label20">
                                   <Properties>
                                     <Property name="horizontalAlignment" type="int" value="2"/>
-                                    <Property name="text" type="java.lang.String" value="Kesimpulan :"/>
+                                    <Property name="text" type="java.lang.String" value="Kesimpulan / Kesan Saran:"/>
                                     <Property name="name" type="java.lang.String" value="label20" noResource="true"/>
                                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                                       <Dimension value="[60, 23]"/>
@@ -1342,7 +1392,7 @@
                                   </Properties>
                                   <Constraints>
                                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                                      <AbsoluteConstraints x="15" y="457" width="90" height="23"/>
+                                      <AbsoluteConstraints x="15" y="457" width="230" height="23"/>
                                     </Constraint>
                                   </Constraints>
                                 </Component>
@@ -1383,7 +1433,7 @@
                                 <Component class="widget.Label" name="label21">
                                   <Properties>
                                     <Property name="horizontalAlignment" type="int" value="2"/>
-                                    <Property name="text" type="java.lang.String" value="Kesan :"/>
+                                    <Property name="text" type="java.lang.String" value="Kesan:"/>
                                     <Property name="name" type="java.lang.String" value="label21" noResource="true"/>
                                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                                       <Dimension value="[60, 23]"/>
