--- a/report/22072024/22072024/rptSKL1.jrxml
+++ b/report/22072024/22072024/rptSKL1.jrxml
@@ -396,7 +396,7 @@
 					<font fontName="Tahoma" size="12" isBold="false"/>
 					<paragraph lineSpacing="Single"/>
 				</textElement>
-				<text><![CDATA[Umur Ibu]]></text>
+				<text><![CDATA[Tanggal Lahir]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="161" y="469" width="10" height="22" forecolor="#000000" backcolor="#F0F0DC" uuid="e4892450-b387-4b36-b173-e67d1d104d3e"/>
@@ -526,7 +526,7 @@
 					<font fontName="Tahoma" size="12" isBold="false"/>
 					<paragraph lineSpacing="Single"/>
 				</textElement>
-				<text><![CDATA[Umur Ayah]]></text>
+				<text><![CDATA[Tanggal Lahir]]></text>
 			</staticText>
 			<staticText>
 				<reportElement positionType="Float" mode="Transparent" x="161" y="574" width="99" height="22" forecolor="#000000" backcolor="#F0F0DC" uuid="3c585c3c-7aa7-45a9-aa3b-407a76340158"/>
@@ -537,7 +537,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" pattern="">
-				<reportElement positionType="Float" x="175" y="599" width="251" height="22" uuid="410723f7-880c-4744-872a-7c0d6325f55b"/>
+				<reportElement positionType="Float" x="175" y="599" width="251" height="22" forecolor="#FFFFFF" uuid="410723f7-880c-4744-872a-7c0d6325f55b"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Tahoma" size="12"/>
 					<paragraph lineSpacing="Single"/>
@@ -545,7 +545,7 @@
 				<textFieldExpression><![CDATA[$F{pekerjaanpj}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement positionType="Float" mode="Transparent" x="67" y="599" width="193" height="22" forecolor="#000000" backcolor="#F0F0DC" uuid="59053a8b-811a-47f4-83f0-5b9de9f7e0e1">
+				<reportElement positionType="Float" mode="Transparent" x="67" y="599" width="193" height="22" forecolor="#FFFFFF" backcolor="#F0F0DC" uuid="59053a8b-811a-47f4-83f0-5b9de9f7e0e1">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -555,7 +555,7 @@
 				<text><![CDATA[Pekerjaan]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" mode="Transparent" x="161" y="599" width="99" height="22" forecolor="#000000" backcolor="#F0F0DC" uuid="c702cffb-bb67-47ea-a0b0-2475d94b78e5"/>
+				<reportElement positionType="Float" mode="Transparent" x="161" y="599" width="99" height="22" forecolor="#FFFFFF" backcolor="#F0F0DC" uuid="c702cffb-bb67-47ea-a0b0-2475d94b78e5"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Tahoma" size="12" isBold="false"/>
 					<paragraph lineSpacing="Single"/>
