--- a/src/simrskhanza/src22072024/DlgIKBBayi.form
+++ b/src/simrskhanza/src22072024/DlgIKBBayi.form
@@ -607,7 +607,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/picture/category.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Surat Keterangan Lahir 1"/>
+            <Property name="text" type="java.lang.String" value="Surat Keterangan Lahir 1 - Tunggal Oke"/>
             <Property name="name" type="java.lang.String" value="MnSKL" noResource="true"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[250, 28]"/>
@@ -631,7 +631,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/picture/category.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Surat Keterangan Lahir 2 - Oke"/>
+            <Property name="text" type="java.lang.String" value="Surat Keterangan Lahir 2 - Kembar Oke"/>
             <Property name="name" type="java.lang.String" value="MnSKL1" noResource="true"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[250, 28]"/>
@@ -2450,7 +2450,7 @@
                     </Component>
                     <Component class="widget.Label" name="label18">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Ibu Bayi :"/>
+                        <Property name="text" type="java.lang.String" value="Nama Ibu Bayi :"/>
                         <Property name="name" type="java.lang.String" value="label18" noResource="true"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[65, 23]"/>
@@ -2739,7 +2739,7 @@
                     </Component>
                     <Component class="widget.Label" name="label20">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Umur Ibu :"/>
+                        <Property name="text" type="java.lang.String" value="Tgl Lhr Ibu :"/>
                         <Property name="name" type="java.lang.String" value="label20" noResource="true"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[65, 23]"/>
@@ -3122,7 +3122,7 @@
                     </Component>
                     <Component class="widget.Label" name="label35">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Umur Ayah :"/>
+                        <Property name="text" type="java.lang.String" value="Tgl Lhr Ayah :"/>
                         <Property name="name" type="java.lang.String" value="label35" noResource="true"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[65, 23]"/>
